# ads_oneshop

./: .gitignore  DEVELOPMENT.md  MANIFEST.in  Makefile  OWNERS  README.md  appsecrets.yaml  build_images.sh  deploy_job.sh  examples.md  generate_schemas.sh  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  run_job.sh  schedule_job.sh  setup.py  walkthrough.md
acit/: acit.py  ads.py  bq_table_pb2.py  bq_table_pb2.pyi  create_base_tables.py  gaql.py  initial_setup.sh  merchant_account.py  performance_max.py  product.py  product_category.py  register_app_secrets.py  requirements.txt  resource_downloader.py  run_acit.sh  schema.proto  schema_pb2.py  schema_pb2.pyi  shopping.py  test_acit.py
acit/api/v0/storage/: schema.proto
acit/api_datasets/google_ads/: get_geo_targets.py  get_languages.py  get_performance_data.py  write_shopping_performance.py
acit/api_datasets/merchant_center/shopping/content/products/: _constants.py  auth.py  common.py  gcs_product_list.py  gcs_product_status_list.py  token_storage.py
acit/config/: constants.py
acit/dataset_create/: data_set_creation.py
acit/dataset_delete/: cloud_cleanup.py
acit/dataset_init/: cloud_init.py
acit/schemas/acit/: Products.schema  accounts.schema  liasettings.schema  performance.schema
acit/tests/: test_beam.py  test_create_base_tables.py  test_performance_max.py  test_product.py
acit/tools/: generate_test_data.py  test_generate_test_data.py
acit/views/: disapprovals_view.sql  main_view.sql
benchmark/: benchmark_details.csv  benchmark_details.json  benchmark_values.csv  benchmark_values.json
ci/: run_tests.py
dockerfiles/cloud_run_job/: Dockerfile
dockerfiles/dataflow/: Dockerfile
extensions/merchant_excellence/: account_list.sql  admin_tables.sql  all_metrics.sql  all_metrics_historical.sql  benchmark_scores.sql  ml_data.sql  offer_funnel.sql  offer_funnel_historical.sql  offer_list.sql  run_acit_mex.sh  run_mex.sh
extensions/merchant_excellence/model/: README.md  model.py  model_test.py  requirements.txt
infra/: main.tf  outputs.tf  provider.tf  variables.tf
src/acit/: acit.py  ads.py  create_base_tables.py  gaql.py  product.py  register_app_secrets.py  resource_downloader.py  run_acit.sh  secret.py  shopping.py  test_acit.py
src/acit/api/v0/storage/: schema.proto
src/acit/auth/: oauth.py  test_oauth.py
src/acit/schemas/acit/: accounts.schema  shippingsettings.schema
src/acit/tests/: test_create_base_tables.py  test_performance_max.py  test_product.py  test_register_app_secrets.py  test_secret.py  test_shopping.py
src/acit/tools/: generate_test_data.py  test_generate_test_data.py
src/acit/views/: disapprovals_view.sql
src/gen_bq_schema/: __init__.py
