[project]
name = 'gtech-oneshop'
version = '1.0'
requires-python = '>= 3.9'
dependencies = [
  'google-ads',
  'google-api-python-client',
  'google-auth',
  'google-auth-oauthlib',
  'google-auth-httplib2',
  'google-cloud-bigquery',
  'google-cloud-storage',
  'six',
  'absl-py',
  'apache-beam[gcp]',
  'pyarrow-hotfix',
  'protobuf',
  'etils[epath-gcs]',
  'google-cloud-secret-manager',
  'PyYAML',
  'google-crc32c',
]

[build-system]
# We need the generated protos to use a version of protobuf compatible with beam and grpc
requires = [
  'setuptools',
  'grpcio-tools',
  'apache-beam >= 2.60.0',
  'protobuf',
  'importlib-resources',
  'typing-extensions',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['acit*', 'gen_bq_schema*']

[tool.setuptools.package-dir]
# This blank path is required for protoc to know the root of the repo
'' = '.'
'acit' = './acit'
'gen_bq_schema' = './gen_bq_schema'

[tool.setuptools.exclude-package-data]
'*' = ['*.proto']
