[project]
name = 'gtech-oneshop'
version = '1.0'
requires-python = '>= 3.11'
dependencies = [
  'google-ads',
  'google-api-python-client',
  'google-auth',
  'google-auth-oauthlib',
  'google-auth-httplib2',
  'google-cloud-bigquery',
  'google-cloud-storage',
  'six',
  'absl-py',
  'apache-beam[gcp]==2.60.0',
  'pyarrow-hotfix',
  'protobuf',
  'etils[epath-gcs]',
  'google-cloud-secret-manager',
  'PyYAML',
  'google-crc32c',
]

[build-system]
# We need the generated protos to use a version of protobuf compatible with beam and grpc
requires = [
  'build',
  'grpcio-tools',
  'apache-beam==2.60.0',
  'protobuf',
  'importlib-resources',
  'typing-extensions',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools.package-dir]
# This blank path is required for protoc to know the root of the repo
'' = '.'
'acit' = './src/acit'
'gen_bq_schema' = './src/gen_bq_schema'
